--- a/public/about.html
+++ b/public/about.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Node-203</title>
+  <title>About</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Ahoy Sailor o/</h1>
+  <h1>Ahoy from About o/</h1>
 </body>
 </html>
